fix(frontend): fix alignement issues for campaigns list, UI improvements

--- a/packages/frontend/src/components/campaigns/campaign/rewards/styles.module.css
+++ b/packages/frontend/src/components/campaigns/campaign/rewards/styles.module.css
@@ -37,5 +37,5 @@
 }
 
 .textRewards {
-    @apply !text-sm sm:!text-base sm:min-w-[72px] sm:text-right;
+    @apply !text-sm sm:!text-base sm:min-w-[50px] sm:text-right;
 }
