--- a/packages/frontend/src/components/campaigns/styles.module.css
+++ b/packages/frontend/src/components/campaigns/styles.module.css
@@ -20,16 +20,42 @@
     @apply flex justify-between items-center gap-3;
 }
 
-.row {
-    @apply grid-cols-12 sm:grid-cols-[0.1fr_0.4fr_3fr_1fr_1fr_1fr] gap-5 px-2 sm:px-7 items-center;
+.tableWrapper {
+    @apply sm:h-[776px];
+}
+
+.table {
+    @apply grid
+        grid-cols-12
+        sm:grid-cols-[0.1fr_0.4fr_3fr_1fr_1fr_1fr]
+        gap-5
+        items-center;
 }
 
 .header {
-    @apply sm:grid hidden px-0;
+    @apply sm:grid hidden grid-cols-subgrid col-span-full px-7;
+}
+
+.header > :nth-child(1),
+.header > :nth-child(2) {
+    @apply justify-self-center;
 }
 
 .body {
-    @apply w-full sm:h-[720px] mt-4 flex flex-col mb-7 rounded-xl overflow-hidden gap-2 sm:gap-0;
+    @apply w-full
+        flex
+        flex-col
+        gap-y-2
+        my-5
+        sm:my-0
+        sm:gap-y-0
+        sm:grid
+        sm:grid-cols-subgrid
+        col-span-full;
+}
+
+.body > :first-child > div {
+    @apply rounded-t-xl;
 }
 
 .body > :last-child > div {
@@ -38,7 +64,8 @@
 
 .empty {
     @apply w-full
-        h-[780px]
+        sm:col-span-full
+        h-[720px]
         flex
         flex-col
         items-center
